--- a/render.yaml
+++ b/render.yaml
@@ -18,7 +18,7 @@ services:
       - key: NODE_ENV
         value: production
       - key: WEBHOOK_DOMAIN
-        placeholder: "Paste your Render URL here after creation"
+        sync: false
 
   - type: web
     name: asteck-dashboard
